Width change on narrow content. Added banner. Trying to fix it.

--- a/stylesMain.css
+++ b/stylesMain.css
@@ -80,7 +80,7 @@ nav a:hover {
     padding: .5vw;
 }
 
-/* Footer specific items */
+/* Sticky menu/footer specific items */
 main {
     flex: 1 1 auto;
     position: relative; /* need this to position inner content as per */
@@ -160,6 +160,10 @@ p, li {
 }
 
 /* Styles for Specific Items */
+.banner {
+    padding: 0;
+    max-width: 100vw;
+}
 hr {
     margin: 1.5vw 15vw;
 }
@@ -184,7 +188,7 @@ section { /* Some padding around all main items */
     margin-right: 5vw;
 }
 .narrow {
-    padding: 0 20vw;
+    padding: 0 15   vw;
 }
 .bio { /* bio entries to have the picture beside them, so row layout is required */
     flex-direction: row;
@@ -281,10 +285,12 @@ Details at https://www.w3schools.com/howto/howto_css_flip_image.asp
     background-size: 50vw;
 }
 .flip-box-front {
-    background-image: url("images/WatercolourSplatters_LightBlue1.png")
+    background-image: url("images/WatercolourSplatters_LightBlue1.png");
+    /* background-size: contain; */
 }
 .flip-box-back {
-    background-image: url("images/WatercolourSplatters_LightBlue2.png")
+    background-image: url("images/WatercolourSplatters_LightBlue2.png");
+    /* background-size: contain; */
 }
 
 /* Style the front side */
